# yells-at

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  fly.toml
.github/: deploy.yml
.github/workflows/: deploy.yml
config/: default.vcl  nginx.conf
src/: github.rs  main.rs
