[package]
name = "yells-at"
version = "0.1.0"
authors = ["David Cornu <me@davidcornu.com>"]
edition = "2018"

[dependencies]
url = "^2.1"
tokio = { version = "^0.2", features = ["macros"] }
hyper = { version = "^0.13", features = ["stream"] }
hyper-tls = "^0.4"
scraper = "^0.11"
lazy_static = "^1.4"

[dependencies.image]
version = "^0.22"
default-features = false
features = ["jpeg", "png_codec"]
