[package]
name = "yells-at"
version = "0.1.0"
authors = ["David Cornu <me@davidcornu.com>"]
edition = "2021"

[dependencies]
hyper = { version = "0.14.27", features = ["http1", "http2", "client", "server"] }
hyper-tls = "0.5.0"
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
lazy_static = "^1.4"
scraper = "0.18.1"
tokio = { version = "1.34.0", default-features = false, features = ["macros", "rt-multi-thread"] }
url = "^2.1"
